set(BOOST_ROOT /data2/hby/cpp/boost_1_81_0) # 设置boost库搜索路径
set(Boost_NO_SYSTEM_PATHS ON) # 只搜索上语句设置的搜索路径
find_package(Boost COMPONENTS coroutine)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  # MESSAGE( STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}.")
endif()

add_executable(test_thread_pool test_thread_pool.cpp)
add_executable(test_parser test_parser.cpp ../src/http_parser.cpp)
add_executable(test_pipeline test_pipeline.cpp ../src/http_connection.cpp ../src/http_parser.cpp)
add_executable(test_server test_server.cpp ../src/http_connection.cpp ../src/http_parser.cpp ../src/webserver.cpp ../src/epoll_wrapper.cpp)
add_executable(test_server_concurrency test_server_concurrency.cpp ../src/http_connection.cpp ../src/http_parser.cpp ../src/webserver.cpp ../src/epoll_wrapper.cpp)
add_executable(test_log test_log.cpp)
# add_executable(test_handler test_handler.cpp ../src/http_connection.cpp ../src/http_connection.cpp ../src/http_parser.cpp)
target_link_libraries(test_thread_pool pthread)
target_link_libraries(test_parser pthread)
target_link_libraries(test_pipeline pthread)
target_link_libraries(test_server Boost::boost pthread)
target_link_libraries(test_server_concurrency Boost::boost Boost::coroutine pthread)
target_link_libraries(test_log pthread)
# target_link_libraries(test_handler pthread)

add_test(NAME test_thread_pool COMMAND test_thread_pool)
add_test(NAME test_parser COMMAND test_parser)
add_test(NAME test_pipeline COMMAND test_pipeline)
add_test(NAME test_server COMMAND test_server)
add_test(NAME test_server_concurrency COMMAND test_server_concurrency)
add_test(NAME test_log COMMAND test_log)
# add_test(NAME test_handler COMMAND test_handler)
